# vulkan-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  build.sh  imgui.ini  vk_layer_settings.txt
example/: main.cc
lib/: context.cc  context.hh  model.cc  model.hh  renderer.cc  renderer.hh  utils.cc  utils.hh  utils_base.hh  vertex.cc  vertex.hh  vertex_buffer.cc  vertex_buffer.hh  window.cc  window.hh
shader/: geom_shader.frag  geom_shader.vert  shader.frag  shader.vert  tex_shader.vert
src/: main.cc
